Bug 520595 - kactivitymanagerd crashes
Summary: kactivitymanagerd crashes
Status: RESOLVED FIXED
Alias: None
Product: plasmashell
Classification: Plasma
Component: Activities in general (other bugs)
Version First Reported In: 6.6.5
Platform: Compiled Sources Linux
: NOR crash
Target Milestone: 1.0
Assignee: Plasma Bugs List
URL:
Keywords: drkonqi
Depends on:
Blocks:
 
Reported: 2026-05-24 12:17 UTC by virgilerl
Modified: 2026-05-28 14:12 UTC (History)
3 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 6.6.6
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description virgilerl 2026-05-24 12:17:57 UTC
Application: kactivitymanagerd (6.6.5)
 (Compiled from sources)
ApplicationNotResponding [ANR]: false
Qt Version: 6.10.2
Frameworks Version: 6.26.0
Operating System: Linux 6.17.0-29-generic x86_64
Windowing System: Wayland
Distribution: KDE neon User Edition
DrKonqi: 6.6.5 [CoredumpBackend]

-- Information about the crash:
neofetch
             `..---+/---..`                
         `---.``   ``   `.---.`            --------------- 
      .--.`        ``        `-:-.         OS: KDE neon User Edition x86_64 
    `:/:     `.----//----.`     :/-        Host: EXCALIBUR-AMD-AI Standard 
   .:.    `---`          `--.`    .:`      Kernel: 6.17.0-29-generic 
  .:`   `--`                .:-    `:.     Uptime: 24 mins 
 `/    `:.      `.-::-.`      -:`   `/`    Packages: 2244 (dpkg), 28 (flatpak) 
 /.    /.     `:++++++++:`     .:    .:    Shell: bash 5.2.21 
`/    .:     `+++++++++++/      /`   `+`   Resolution: 2560x1600 
/+`   --     .++++++++++++`     :.   .+:   DE: Plasma 6.6.5 
`/    .:     `+++++++++++/      /`   `+`   WM: kwin 
 /`    /.     `:++++++++:`     .:    .:    Theme: Breeze [GTK2/3] 
 ./    `:.      `.:::-.`      -:`   `/`    Icons: breeze [GTK2/3] 
  .:`   `--`                .:-    `:.     Terminal: konsole 
   .:.    `---`          `--.`    .:`      CPU: AMD Ryzen AI 9 365 w/ Radeon 880M (20) @ 5.090GHz 
    `:/:     `.----//----.`     :/-        GPU: AMD ATI 03:00.0 Device 150e 
      .-:.`        ``        `-:-.         Memory: 4072MiB / 30899MiB 
         `---.``   ``   `.---.`
             `..---+/---..`

The crash can be reproduced every time.

-- Backtrace:
Application: kactivitymanagerd (kactivitymanagerd), signal: Aborted
Content of s_kcrashErrorMessage: std::unique_ptr<char []> = {get() = 0x0}
[New LWP 5354]
[New LWP 5360]
[New LWP 5359]
[New LWP 5356]
[New LWP 5358]
[New LWP 5357]
[New LWP 5361]
[New LWP 5363]
[Thread debugging using libthread_db enabled]
Using host libthread_db library "/lib/x86_64-linux-gnu/libthread_db.so.1".
Core was generated by `/usr/lib/x86_64-linux-gnu/libexec/kactivitymanagerd'.
Program terminated with signal SIGABRT, Aborted.
Download failed: Invalid argument.  Continuing without source file ./nptl/./nptl/pthread_kill.c.
#0  __pthread_kill_implementation (no_tid=0, signo=6, threadid=<optimized out>) at ./nptl/pthread_kill.c:44

warning: 44	./nptl/pthread_kill.c: No such file or directory
[Current thread is 1 (Thread 0x79f2e0216a40 (LWP 5354))]
Using eu-unstrip to resolve modules.

Download failed: Invalid argument.  Continuing without source file ./stdlib/./stdlib/abort.c.
Download failed: Invalid argument.  Continuing without source file ./signal/../sysdeps/posix/raise.c.
Download failed: Invalid argument.  Continuing without source file ./nptl/./nptl/pthread_kill.c.
Download failed: Invalid argument.  Continuing without source file ./misc/../sysdeps/unix/sysv/linux/x86_64/clone3.S.
Download failed: Invalid argument.  Continuing without source file ./nptl/./nptl/pthread_create.c.
Download failed: Invalid argument.  Continuing without source file ./posix/../sysdeps/unix/sysv/linux/nanosleep.c.
Download failed: Invalid argument.  Continuing without source file ./time/../sysdeps/unix/sysv/linux/clock_nanosleep.c.
Download failed: Invalid argument.  Continuing without source file ./io/../sysdeps/unix/sysv/linux/poll.c.
[Current thread is 1 (Thread 0x79f2e0216a40 (LWP 5354))]

Thread 8 (Thread 0x79f2cd1ff6c0 (LWP 5363)):
#0  0x000079f2e00ecadf in __GI___clock_nanosleep (clock_id=clock_id@entry=0, flags=flags@entry=0, req=0x79f2cd1fead0, rem=0x79f2cd1fead0) at ../sysdeps/unix/sysv/linux/clock_nanosleep.c:78
#1  0x000079f2e00f9a27 in __GI___nanosleep (req=<optimized out>, rem=<optimized out>) at ../sysdeps/unix/sysv/linux/nanosleep.c:25
#2  0x000079f2e0bcad55 in qt_nanosleep (amount=...) at /workspace/build/src/corelib/thread/qthread_unix.cpp:637
#3  QThread::sleep (nsec=...) at /workspace/build/src/corelib/thread/qthread_unix.cpp:657
#4  0x0000641f3057a5eb in Resources::Private::run (this=0x641f45d24090) at /workspace/build/src/service/Resources.cpp:47
#5  0x000079f2e0bd1937 in operator() (__closure=<optimized out>) at /workspace/build/src/corelib/thread/qthread_unix.cpp:448
#6  (anonymous namespace)::terminate_on_exception<QThreadPrivate::start(void*)::<lambda()> > (t=...) at /workspace/build/src/corelib/thread/qthread_unix.cpp:373
#7  QThreadPrivate::start (arg=0x641f45d24090) at /workspace/build/src/corelib/thread/qthread_unix.cpp:422
#8  0x000079f2e009caa4 in start_thread (arg=<optimized out>) at ./nptl/pthread_create.c:447
#9  0x000079f2e0129c6c in clone3 () at ../sysdeps/unix/sysv/linux/x86_64/clone3.S:78

Thread 7 (Thread 0x79f2d5ffb6c0 (LWP 5361)):
#0  0x000079f2e011b4fd in __GI___poll (fds=0x79f2b80013b0, nfds=1, timeout=-1) at ../sysdeps/unix/sysv/linux/poll.c:29
#1  0x000079f2e07738ce in ?? () from /lib/x86_64-linux-gnu/libglib-2.0.so.0
#2  0x000079f2e0713a23 in g_main_context_iteration () from /lib/x86_64-linux-gnu/libglib-2.0.so.0
#3  0x000079f2e0ab95b0 in QEventDispatcherGlib::processEvents (this=0x79f2b8000b70, flags=...) at /workspace/build/src/corelib/kernel/qeventdispatcher_glib.cpp:399
#4  0x000079f2e0d05a83 in QEventLoop::exec (this=0x79f2d5ffaae0, flags=...) at /workspace/build/src/corelib/global/qflags.h:77
#5  0x000079f2e0c11123 in QThread::exec (this=<optimized out>) at /workspace/build/src/corelib/global/qflags.h:77
#6  0x0000641f3055c8d4 in runInQThread<Features>()::Thread::run() (this=0x641f45d33bc0) at /workspace/build/src/service/Application.cpp:66
#7  0x000079f2e0bd1937 in operator() (__closure=<optimized out>) at /workspace/build/src/corelib/thread/qthread_unix.cpp:448
#8  (anonymous namespace)::terminate_on_exception<QThreadPrivate::start(void*)::<lambda()> > (t=...) at /workspace/build/src/corelib/thread/qthread_unix.cpp:373
#9  QThreadPrivate::start (arg=0x641f45d33bc0) at /workspace/build/src/corelib/thread/qthread_unix.cpp:422
#10 0x000079f2e009caa4 in start_thread (arg=<optimized out>) at ./nptl/pthread_create.c:447
#11 0x000079f2e0129c6c in clone3 () at ../sysdeps/unix/sysv/linux/x86_64/clone3.S:78

Thread 6 (Thread 0x79f2d7fff6c0 (LWP 5357)):
#0  0x000079f2e011b4fd in __GI___poll (fds=fds@entry=0x79f2d7ffeb00, nfds=nfds@entry=2, timeout=timeout@entry=-1) at ../sysdeps/unix/sysv/linux/poll.c:29
#1  0x000079f2dcbabc59 in poll (__timeout=-1, __nfds=2, __fds=0x79f2d7ffeb00) at /usr/include/x86_64-linux-gnu/bits/poll2.h:39
#2  QtWaylandClient::EventThread::run (this=0x641f45d00110) at /workspace/build/src/plugins/platforms/wayland/qwaylanddisplay.cpp:184
#3  0x000079f2e0bd1937 in operator() (__closure=<optimized out>) at /workspace/build/src/corelib/thread/qthread_unix.cpp:448
#4  (anonymous namespace)::terminate_on_exception<QThreadPrivate::start(void*)::<lambda()> > (t=...) at /workspace/build/src/corelib/thread/qthread_unix.cpp:373
#5  QThreadPrivate::start (arg=0x641f45d00110) at /workspace/build/src/corelib/thread/qthread_unix.cpp:422
#6  0x000079f2e009caa4 in start_thread (arg=<optimized out>) at ./nptl/pthread_create.c:447
#7  0x000079f2e0129c6c in clone3 () at ../sysdeps/unix/sysv/linux/x86_64/clone3.S:78

Thread 5 (Thread 0x79f2d77fe6c0 (LWP 5358)):
#0  0x000079f2e011b4fd in __GI___poll (fds=fds@entry=0x79f2d77fdb00, nfds=nfds@entry=2, timeout=timeout@entry=-1) at ../sysdeps/unix/sysv/linux/poll.c:29
#1  0x000079f2dcbabc59 in poll (__timeout=-1, __nfds=2, __fds=0x79f2d77fdb00) at /usr/include/x86_64-linux-gnu/bits/poll2.h:39
#2  QtWaylandClient::EventThread::run (this=0x641f45d0d7e0) at /workspace/build/src/plugins/platforms/wayland/qwaylanddisplay.cpp:184
#3  0x000079f2e0bd1937 in operator() (__closure=<optimized out>) at /workspace/build/src/corelib/thread/qthread_unix.cpp:448
#4  (anonymous namespace)::terminate_on_exception<QThreadPrivate::start(void*)::<lambda()> > (t=...) at /workspace/build/src/corelib/thread/qthread_unix.cpp:373
#5  QThreadPrivate::start (arg=0x641f45d0d7e0) at /workspace/build/src/corelib/thread/qthread_unix.cpp:422
#6  0x000079f2e009caa4 in start_thread (arg=<optimized out>) at ./nptl/pthread_create.c:447
#7  0x000079f2e0129c6c in clone3 () at ../sysdeps/unix/sysv/linux/x86_64/clone3.S:78

Thread 4 (Thread 0x79f2dcad66c0 (LWP 5356)):
#0  0x000079f2e011b4fd in __GI___poll (fds=0x79f2d80015f0, nfds=2, timeout=-1) at ../sysdeps/unix/sysv/linux/poll.c:29
#1  0x000079f2e07738ce in ?? () from /lib/x86_64-linux-gnu/libglib-2.0.so.0
#2  0x000079f2e0713a23 in g_main_context_iteration () from /lib/x86_64-linux-gnu/libglib-2.0.so.0
#3  0x000079f2e0ab95b0 in QEventDispatcherGlib::processEvents (this=0x79f2d8000b70, flags=...) at /workspace/build/src/corelib/kernel/qeventdispatcher_glib.cpp:399
#4  0x000079f2e0d05a83 in QEventLoop::exec (this=0x79f2dcad5ad0, flags=...) at /workspace/build/src/corelib/global/qflags.h:77
#5  0x000079f2e0c11123 in QThread::exec (this=this@entry=0x79f2e13ffde0 <QGlobalStatic<QtGlobalStatic::Holder<(anonymous namespace)::Q_QGS__q_manager> >::instance()::holder>) at /workspace/build/src/corelib/global/qflags.h:77
#6  0x000079f2e13e03ce in QDBusConnectionManager::run (this=0x79f2e13ffde0 <QGlobalStatic<QtGlobalStatic::Holder<(anonymous namespace)::Q_QGS__q_manager> >::instance()::holder>) at /workspace/build/src/dbus/qdbusconnectionmanager.cpp:145
#7  0x000079f2e0bd1937 in operator() (__closure=<optimized out>) at /workspace/build/src/corelib/thread/qthread_unix.cpp:448
#8  (anonymous namespace)::terminate_on_exception<QThreadPrivate::start(void*)::<lambda()> > (t=...) at /workspace/build/src/corelib/thread/qthread_unix.cpp:373
#9  QThreadPrivate::start (arg=0x79f2e13ffde0 <QGlobalStatic<QtGlobalStatic::Holder<(anonymous namespace)::Q_QGS__q_manager> >::instance()::holder>) at /workspace/build/src/corelib/thread/qthread_unix.cpp:422
#10 0x000079f2e009caa4 in start_thread (arg=<optimized out>) at ./nptl/pthread_create.c:447
#11 0x000079f2e0129c6c in clone3 () at ../sysdeps/unix/sysv/linux/x86_64/clone3.S:78

Thread 3 (Thread 0x79f2d6ffd6c0 (LWP 5359)):
#0  0x000079f2e011b4fd in __GI___poll (fds=0x79f2c00013b0, nfds=1, timeout=-1) at ../sysdeps/unix/sysv/linux/poll.c:29
#1  0x000079f2e07738ce in ?? () from /lib/x86_64-linux-gnu/libglib-2.0.so.0
#2  0x000079f2e0713a23 in g_main_context_iteration () from /lib/x86_64-linux-gnu/libglib-2.0.so.0
#3  0x000079f2e0ab95b0 in QEventDispatcherGlib::processEvents (this=0x79f2c0000b70, flags=...) at /workspace/build/src/corelib/kernel/qeventdispatcher_glib.cpp:399
#4  0x000079f2e0d05a83 in QEventLoop::exec (this=0x79f2d6ffcae0, flags=...) at /workspace/build/src/corelib/global/qflags.h:77
#5  0x000079f2e0c11123 in QThread::exec (this=<optimized out>) at /workspace/build/src/corelib/global/qflags.h:77
#6  0x0000641f3055c668 in runInQThread<Resources>()::Thread::run() (this=0x641f45d223f0) at /workspace/build/src/service/Application.cpp:66
#7  0x000079f2e0bd1937 in operator() (__closure=<optimized out>) at /workspace/build/src/corelib/thread/qthread_unix.cpp:448
#8  (anonymous namespace)::terminate_on_exception<QThreadPrivate::start(void*)::<lambda()> > (t=...) at /workspace/build/src/corelib/thread/qthread_unix.cpp:373
#9  QThreadPrivate::start (arg=0x641f45d223f0) at /workspace/build/src/corelib/thread/qthread_unix.cpp:422
#10 0x000079f2e009caa4 in start_thread (arg=<optimized out>) at ./nptl/pthread_create.c:447
#11 0x000079f2e0129c6c in clone3 () at ../sysdeps/unix/sysv/linux/x86_64/clone3.S:78

Thread 2 (Thread 0x79f2d67fc6c0 (LWP 5360)):
#0  0x000079f2e011b4fd in __GI___poll (fds=0x79f2c40013b0, nfds=1, timeout=-1) at ../sysdeps/unix/sysv/linux/poll.c:29
#1  0x000079f2e07738ce in ?? () from /lib/x86_64-linux-gnu/libglib-2.0.so.0
#2  0x000079f2e0713a23 in g_main_context_iteration () from /lib/x86_64-linux-gnu/libglib-2.0.so.0
#3  0x000079f2e0ab95b0 in QEventDispatcherGlib::processEvents (this=0x79f2c4000b70, flags=...) at /workspace/build/src/corelib/kernel/qeventdispatcher_glib.cpp:399
#4  0x000079f2e0d05a83 in QEventLoop::exec (this=0x79f2d67fbae0, flags=...) at /workspace/build/src/corelib/global/qflags.h:77
#5  0x000079f2e0c11123 in QThread::exec (this=<optimized out>) at /workspace/build/src/corelib/global/qflags.h:77
#6  0x0000641f3055c79e in runInQThread<Activities>()::Thread::run() (this=0x641f45d26d80) at /workspace/build/src/service/Application.cpp:66
#7  0x000079f2e0bd1937 in operator() (__closure=<optimized out>) at /workspace/build/src/corelib/thread/qthread_unix.cpp:448
#8  (anonymous namespace)::terminate_on_exception<QThreadPrivate::start(void*)::<lambda()> > (t=...) at /workspace/build/src/corelib/thread/qthread_unix.cpp:373
#9  QThreadPrivate::start (arg=0x641f45d26d80) at /workspace/build/src/corelib/thread/qthread_unix.cpp:422
#10 0x000079f2e009caa4 in start_thread (arg=<optimized out>) at ./nptl/pthread_create.c:447
#11 0x000079f2e0129c6c in clone3 () at ../sysdeps/unix/sysv/linux/x86_64/clone3.S:78

Thread 1 (Thread 0x79f2e0216a40 (LWP 5354)):
[KCrash Handler]
#6  __pthread_kill_implementation (no_tid=0, signo=6, threadid=<optimized out>) at ./nptl/pthread_kill.c:44
#7  __pthread_kill_internal (signo=6, threadid=<optimized out>) at ./nptl/pthread_kill.c:78
#8  __GI___pthread_kill (threadid=<optimized out>, signo=signo@entry=6) at ./nptl/pthread_kill.c:89
#9  0x000079f2e004527e in __GI_raise (sig=sig@entry=6) at ../sysdeps/posix/raise.c:26
#10 0x000079f2e00288ff in __GI_abort () at ./stdlib/abort.c:79
#11 0x000079f2e0d61a31 in qAbort () at /workspace/build/src/corelib/global/qassert.cpp:46
#12 qt_maybe_message_fatal<QString&> (message=..., context=..., msgType=QtFatalMsg) at /workspace/build/src/corelib/global/qlogging.cpp:2166
#13 qt_message(QtMsgType, const QMessageLogContext &, const char *, typedef __va_list_tag __va_list_tag *) (msgType=msgType@entry=QtFatalMsg, context=..., msg=msg@entry=0x79f2e0a72928 "ASSERT failure in %s: \"%s\", file %s, line %d", ap=ap@entry=0x7fff60f5fc68) at /workspace/build/src/corelib/global/qlogging.cpp:412
#14 0x000079f2e0d63310 in QMessageLogger::fatal (this=<optimized out>, msg=0x79f2e0a72928 "ASSERT failure in %s: \"%s\", file %s, line %d") at /workspace/build/src/corelib/global/qlogging.cpp:901
#15 0x000079f2e0d4dc71 in qt_assert_x (where=<optimized out>, what=<optimized out>, file=<optimized out>, line=<optimized out>) at /workspace/build/src/corelib/global/qassert.cpp:122
#16 0x000079f2dc279b19 in StatsPlugin::openResourceEvent (this=0x641f45d34a80, usedActivity=..., initiatingAgent=..., targettedResource=..., start=..., end=...) at /workspace/build/src/service/plugins/sqlite/StatsPlugin.cpp:129
#17 0x000079f2dc27acb6 in StatsPlugin::addEvents (this=0x641f45d34a80, events=...) at /workspace/build/src/service/plugins/sqlite/StatsPlugin.cpp:370
#18 0x000079f2dc27d14f in StatsPlugin::qt_static_metacall (_o=0x641f45d34a80, _c=QMetaObject::InvokeMetaMethod, _id=7, _a=0x79f2bc0013c8) at /workspace/build/obj-x86_64-linux-gnu/src/service/plugins/sqlite/org.kde.ActivityManager.ResourceScoring_autogen/include/moc_StatsPlugin.cpp:187
#19 0x000079f2e0c60c2f in QObject::event (this=0x641f45d34a80, e=0x79f2bc001380) at /workspace/build/src/corelib/kernel/qobject.cpp:1413
#20 0x000079f2e0d039c8 in QCoreApplication::notifyInternal2 (receiver=0x641f45d34a80, event=0x79f2bc001380) at /workspace/build/src/corelib/kernel/qcoreapplication.cpp:1109
#21 0x000079f2e0d03a0d in QCoreApplication::sendEvent (receiver=<optimized out>, event=<optimized out>) at /workspace/build/src/corelib/kernel/qcoreapplication.cpp:1549
#22 0x000079f2e0d042aa in QCoreApplicationPrivate::sendPostedEvents (receiver=0x0, event_type=0, data=0x641f45cfb700) at /workspace/build/src/corelib/kernel/qcoreapplication.cpp:1904
#23 0x000079f2e0abb1a7 in postEventSourceDispatch (s=0x641f45d1f280) at /workspace/build/src/corelib/kernel/qeventdispatcher_glib.cpp:246
#24 0x000079f2e0714585 in ?? () from /lib/x86_64-linux-gnu/libglib-2.0.so.0
#25 0x000079f2e0773977 in ?? () from /lib/x86_64-linux-gnu/libglib-2.0.so.0
#26 0x000079f2e0713a23 in g_main_context_iteration () from /lib/x86_64-linux-gnu/libglib-2.0.so.0
#27 0x000079f2e0ab95b0 in QEventDispatcherGlib::processEvents (this=0x641f45d00600, flags=...) at /workspace/build/src/corelib/kernel/qeventdispatcher_glib.cpp:399
#28 0x000079f2e0d05a83 in QEventLoop::exec (this=this@entry=0x7fff60f60690, flags=..., flags@entry=...) at /workspace/build/src/corelib/global/qflags.h:77
#29 0x000079f2e0d080c8 in QCoreApplication::exec () at /workspace/build/src/corelib/global/qflags.h:77
#30 0x0000641f3055a976 in main (argc=1, argv=0x7fff60f608e8) at /workspace/build/src/service/Application.cpp:259

Reported using DrKonqi
Comment 1 Bug Janitor Service 2026-05-25 10:38:14 UTC
A possibly relevant merge request was started @ https://invent.kde.org/plasma/kactivitymanagerd/-/merge_requests/113
Comment 2 Marco Martin 2026-05-25 10:52:53 UTC
Git commit 0343d6f153ab20fcca1749fbd0f24e6489da4d33 by Marco Martin.
Committed on 25/05/2026 at 10:28.
Pushed by mart into branch 'master'.

StatsPlugin: Don't try to log events in limbo state

It's possible that for a moment currentActivity() becomes
empty for a moment and goes in a limbo state
(Activity.cpp, line 118) more probably on daemon startup phase.
in that moment we can't call StatsPlugin::addEvents and openResourceEvent
as they assume currentActivity will always be valid at this point

M  +5    -1    src/service/plugins/sqlite/StatsPlugin.cpp

https://invent.kde.org/plasma/kactivitymanagerd/-/commit/0343d6f153ab20fcca1749fbd0f24e6489da4d33
Comment 3 Marco Martin 2026-05-28 08:30:00 UTC
Git commit a84ca1ac93099733ee27188d6d9844ed1f32a744 by Marco Martin.
Committed on 25/05/2026 at 10:54.
Pushed by mart into branch 'Plasma/6.6'.

StatsPlugin: Don't try to log events in limbo state

It's possible that for a moment currentActivity() becomes
empty for a moment and goes in a limbo state
(Activity.cpp, line 118) more probably on daemon startup phase.
in that moment we can't call StatsPlugin::addEvents and openResourceEvent
as they assume currentActivity will always be valid at this point


(cherry picked from commit 0343d6f153ab20fcca1749fbd0f24e6489da4d33)

0343d6f1 StatsPlugin: Don't try to log events in limbo state

Co-authored-by: Marco Martin <notmart@gmail.com>

M  +5    -1    src/service/plugins/sqlite/StatsPlugin.cpp

https://invent.kde.org/plasma/kactivitymanagerd/-/commit/a84ca1ac93099733ee27188d6d9844ed1f32a744
Comment 4 Marco Martin 2026-05-28 08:30:16 UTC
Git commit d83560775fcd7e5370f2c394682deebccae99007 by Marco Martin.
Committed on 28/05/2026 at 08:29.
Pushed by mart into branch 'Plasma/6.7'.

StatsPlugin: Don't try to log events in limbo state

It's possible that for a moment currentActivity() becomes
empty for a moment and goes in a limbo state
(Activity.cpp, line 118) more probably on daemon startup phase.
in that moment we can't call StatsPlugin::addEvents and openResourceEvent
as they assume currentActivity will always be valid at this point


(cherry picked from commit 0343d6f153ab20fcca1749fbd0f24e6489da4d33)

0343d6f1 StatsPlugin: Don't try to log events in limbo state

Co-authored-by: Marco Martin <notmart@gmail.com>

M  +5    -1    src/service/plugins/sqlite/StatsPlugin.cpp

https://invent.kde.org/plasma/kactivitymanagerd/-/commit/d83560775fcd7e5370f2c394682deebccae99007