StatsPlugin: Don't try to log events in limbo state

It's possible that for a moment currentActivity() becomes
empty for a moment and goes in a limbo state
(Activity.cpp, line 118) more probably on daemon startup phase.
in that moment we can't call StatsPlugin::addEvents and openResourceEvent
as they assume currentActivity will always be valid at this point

BUG:520595